# silicon-scratch

./: .gitignore  CMakeLists.txt  Makefile  README.md  mmake.config.ts
src/lib/fs/: fs.h
src/lib/json/: json.h
src/lib/json/using/: Json.h
src/lib/zip/: ZipArchive.cpp  ZipArchive.h  ZipArchiveEntry.cpp  ZipArchiveEntry.h  ZipFile.cpp  ZipFile.h
src/lib/zip/compression/lzma/: lzma_decoder.h
src/lib/zip/compression/lzma/detail/: lzma_out_stream.h
src/lib/zip/detail/: EndOfCentralDirectoryBlock.cpp  EndOfCentralDirectoryBlock.h  ZipCentralDirectoryFileHeader.cpp  ZipCentralDirectoryFileHeader.h  ZipGenericExtraField.cpp  ZipGenericExtraField.h  ZipLocalFileHeader.cpp  ZipLocalFileHeader.h
src/lib/zip/extlibs/bzip2/: bzerror.c  bzlib.c  decompress.c
src/lib/zip/extlibs/lzma/unix/: Alloc.c  LzFindMt.c  LzmaEnc.c  XzIn.c
src/lib/zip/extlibs/zlib/: infback.c  inflate.c
src/lib/zip/methods/: ICompressionMethod.h
src/lib/zip/streams/: Serializable.h  serialization.h
src/lib/zip/streams/streambuffs/: compression_decoder_streambuf.h  crc32_streambuf.h  null_streambuf.h
src/lib/zip/utils/: BitFlagSetter.h  enum_utils.h  time_utils.cpp  time_utils.h
src/main/core/: main.cpp  main.h  modifiedZipLib.cpp  modifiedZipLib.h  originalZipLib.cpp  originalZipLib.h
src/main/util/: MappedIterator.h  SlicedIterable.h  numbers.h  strings.cpp  strings.h
src/main/util/cast/: iterators.h
src/test/: Test.cpp  Test.h  Tests.cpp  Tests.h  misc.cpp  test.cpp  test.h
